Update argocd.yaml with SSl Patchthrough

--- a/values/argocd.yaml
+++ b/values/argocd.yaml
@@ -5,6 +5,8 @@ server:
     annotations:
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
       kubernetes.io/tls-acme: true
+      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     tls:
       - secretName: "argocd-secret"
   extraArgs:
