--- a/values/argocd.yaml
+++ b/values/argocd.yaml
@@ -6,7 +6,7 @@ server:
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
       kubernetes.io/tls-acme: true
       nginx.ingress.kubernetes.io/ssl-passthrough: "true"
-      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     tls:
       - secretName: "argocd-secret"
   extraArgs:
